--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "random",
+  "name": "mp-andom",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "micro-bot"
   },
   "author": "",
   "license": "ISC",
