--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mp-andom",
+  "name": "mp-random",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.17.1",
     "telegraf": "^4.3.0"
   },
   "engines": {
