--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "firebase": "^8.3.2",
     "telegraf": "^4.3.0"
   },
   "engines": {
