Added reply keyboard and some testing examples

--- a/package.json
+++ b/package.json
@@ -5,16 +5,20 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "NODE_ENV=dev nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "firebase": "^8.3.2",
-    "telegraf": "^4.3.0"
+    "telegraf": "^4.4.0",
+    "telegram-keyboard": "^2.2.6"
   },
   "engines": {
     "node": "14.15.0"
+  },
+  "devDependencies": {
+    "dotenv": "^10.0.0"
   }
 }
